// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSetupChecklist getLicenseSetupStatus returns reason if exceeded allowed user count 1`] = `
Object {
  "text": "Your user count has exceeded your license limit. Please, get a new license.",
  "type": "danger",
}
`;

exports[`useSetupChecklist getLicenseSetupStatus returns reason if expired  1`] = `
Object {
  "text": "The Sourcegraph license expired 1 day ago. Please, get a new license.",
  "type": "danger",
}
`;

exports[`useSetupChecklist getLicenseSetupStatus returns reason if expiring soon  1`] = `
Object {
  "text": "The Sourcegraph license will expire in 6 days. Please, renew it soon.",
  "type": "warning",
}
`;

exports[`useSetupChecklist getLicenseSetupStatus returns reason if free plan license 1`] = `
Object {
  "text": "You are on a free plan. Please, upgrade your license to unlock more features.",
  "type": "warning",
}
`;

exports[`useSetupChecklist getLicenseSetupStatus returns reason if license is invalid 1`] = `
Object {
  "text": "The Sourcegraph license key is invalid.",
  "type": "danger",
}
`;
